2012-04-04  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h: renamed avt_image back to avt_image_t
	(only for backwards compatibility; it's deprecated anyway)

	* akfavatar.h, avtaddons.h:
	don't use AVT_BEGIN_DECLS, AVT_END_DECLS anymore
	instead redefine AVT_API, AVT_ADDON

	* akfavatar.h: macro AVT_UNUSED removed, callers adapted

2012-04-03  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c, avatar-default.c (avt_start)
	(avt_avatar_image_default, avt_avatar_image_none, avt_avatar_image_xpm)
	(avt_avatar_image_xbm, avt_avatar_image_data, avt_avatar_image_file):
	new functions
	all callers adapted

	* akfavatar.pas: adapted

	* akfavatar.h, avatar.c, avatar-audio.c (AVT_FAILURE):
	new macro - many functions adapted

2012-03-31  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_show_image_stream, avt_import_image_stream):
	fix: couldn't load anything but XPM

	* avatar.c (avt_show_image_file, avt_show_image_data)
	(avt_import_image_data, avt_import_image_file):
	optimized

	* avatar.c (struct load_image, load_image_initialize, load_image_done):
	uses no file loader anymore

2012-03-19  Andreas K. Foerster  <info@akfoerster.de>

	* avtterm.c (set_foreground_color, set_background_color):
	improve colors

	* pascal/akfavatar.pas (TextColor, TextBackground):
	improve colors

2012-02-25  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_pager): support markup mode

2012-02-13  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_wait): use SDL_Delay() for short times
	akfavatar.h, avatar.c: remove avt_delay()
	lua/lua-avt.c: adapted

2012-02-11  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_mb_decode, avt_mb_decode_buffer)
	(avt_mb_encode, avt_mb_encode_buffer, avt_recode, avt_recode_bffer):
	use size_t
	avtterm.c, lua/lua-avt.c: adapted

	* pascal/multiply.pas:
	cannot be compiled without AKFAvatar anymore (simplified)

2012-02-10  Andreas K. Foerster  <info@akfoerster.de>
