@@ -9,6 +9,9 @@
 
 	* akfavatar.h: macro AVT_UNUSED removed, callers adapted
 
+	* akfavatar.h, avatar-audio.c (avt_start_audio):
+	replaces avt_initialize_audio (to be consistent)
+
 2012-04-03  Andreas K. Foerster  <info@akfoerster.de>
 
 	* akfavatar.h, avatar.c, avatar-default.c (avt_start)
